# python-template

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
src/myproject/: __init__.py
tests/: test_example.py
