[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.9",
    "ty>=0.0.1a19",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
